--- a/template/index.html
+++ b/template/index.html
@@ -16,8 +16,63 @@
         <!-- Portfolio -->
         <!-- Services -->
         <!-- Testimonials -->
+        <section class="testimonial__section">
+            <div class="testimonial__container">
+                <h2 class="testimonial__h2">See what other users are saying about us</h2>
+                <div class="testimonial__card-wrapper">
+                    <div class="testimonial__card">
+                        <div class="testimonial__card-image">
+                            <img src="./images/testimonials/testimonial_1.png" alt="">
+                        </div>
+                        <div class="testimonial__card-body">
+                            <p class="testimonial__card-text-p">The tutorial videos are helpful and time worthy. I really enjoyed.</p>
+                            <hr class="testimonial__hr">
+                            <h4 class="testimonial__h4">Precious Develope</h4>
+                        </div>
+                    </div>
+                    <div class="testimonial__card">
+                        <div class="testimonial__card-image">
+                            <img src="./images/testimonials/testimonial_2.png" alt="">
+                        </div>
+                        <div class="testimonial__card-body">
+                            <p class="testimonial__card-text-p">WebBuildr is truly the fastest and easiest website builder.You have a nice interface i must say.</p>
+                            <hr class="testimonial__hr">
+                            <h4 class="testimonial__h4">Dev Matthew</h4>
+                        </div>
+                    </div>
+                    <div class="testimonial__card">
+                        <div class="testimonial__card-image">
+                            <img src="./images/testimonials/testimonial_3.png" alt="">
+                        </div>
+                        <div class="testimonial__card-body">
+                            <p class="testimonial__card-text-p">The tutorial videos are helpful and time worthy. I really enjoyed.</p>
+                            <hr class="testimonial__hr">
+                            <h4 class="testimonial__h4">Elon Musk</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Partners -->
+        <section class="partners__section">
+            <div class="partners__images-container">
+                <img src="./images/partners/Halfday.svg" alt="">
+                <img src="./images/partners/BBC.svg" alt="">
+                <img src="./images/partners/Qapital.svg" alt="">
+                <img src="./images/partners/Big Fish Games (black).svg" alt="">
+                <img src="./images/partners/PayPal (black).svg" alt="">
+                <img src="./images/partners/Kroma.svg" alt="">
+                <img src="./images/partners/Made.svg" alt="">
+            </div>
+            <h3 class="partners__h3">Our Partners</h3>
+        </section>
         <!-- Call To Action -->
+        <section class="call-to-action__section">
+            <div class="call-to-action__container">
+                <h2 class="call-to-action__h2">yup!!! you are in the right place</h2>
+                <p class="call-to-action__p">WebBuildr enables you to create,edit,collaborate on, publish and store digital content without the help of developers. You do not need a technical skill or knowledge, it’s all made easy using WebBuildr the fastest way to kick start a managable future.</p>
+                <a href="#" class="call-to-action-btn">Create a website for free</a>
+            </div>
         <!-- FQA -->
         <!-- Footer -->
     </main>
