--- a/template/index.html
+++ b/template/index.html
@@ -5,15 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>WebBuildr</title>
 </head>
 <body>
     <main>
         <!-- Header Section -->
-        <!-- Hero Section -->
+        <header class="landing-nav-header">
+        <nav class="landing-nav">
+          <div class="logo">
+            <img src="./images/nav/logo.svg" alt="" />
+          </div>
+          <ul class="landing-navList">
+            <li class="landing-nav-listItem">Product <span>
+                <div class="dropdown-arrow">
+                    <img src="./images/nav/downArrow.svg" alt="" />
+                </div>
+            </span> </li>
+            <li class="landing-nav-listItem">Resource <span>
+                <div class="dropdown-arrow">
+                    <img src="./images/nav/downArrow.svg" alt="" />
+                </div></li>
+            <li class="landing-nav-listItem">Template</li>
+            <li class="landing-nav-listItem">Hire an expert</li>
+          </ul>
+          <div class="landing-nav-action-btns">
+            <div class="landing-nav-login">
+              <a href="" class="landing-nav-login-link">LOG IN</a>
+            </div>
+            <button class="landing-nav-btn-primary-large">
+              <a class="getting-started-link" href="">GET STARTED</a>
+            </button>
+          </div>
+        </nav>
+      </header>
+      
         <!-- Another Section -->
         <!-- Gallery -->
-         <div class="main">
+         <section class="gallery">
         <div class="one">
             <div class="one-one">
                 <img 
@@ -62,7 +90,7 @@
             src="./gallery/iPad Pro 11_ - 4 (1).png" alt="">
         </div>
 
-    </div>
+    </>
         <!-- Portfolio -->
         <!-- Services -->
         <!-- Testimonials -->
