--- a/template/style.css
+++ b/template/style.css
@@ -1,277 +1,365 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 /* 
     Couldn't find the campton font used in the design, so I opted to the closes alternative which was poppins 
     If anyone could manage linking the campton font, please do!
 */
 :root {
-    /* Colors */
-    /* Create custom varibles for colors for easy use as the colors are being used throughout the site. */
-    --blue: #2B2E63;
+  /* Colors */
+  /* Create custom varibles for colors for easy use as the colors are being used throughout the site. */
+  --blue: #2b2e63;
+}
+
+@font-face {
+  font-family: "Campton";
+  src: url("./images/nav/webkit-campton/camptonblack-webfont.woff2")
+      format("woff2"),
+    format("woff");
 }
 
 /* BASIC RESETS */
-*, body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+*,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Campton", sans-serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
+/* NAV STYLES */
+.landing-nav {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  /* width: 1440px; */
+  width: 100%;
+  height: 124px;
+  left: 0px;
+  top: 0px;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(9, 9, 20, 0.1);
+  padding: 3rem 5rem;
+  /* color: #ffffff; */
+}
+
+.landing-navList {
+  display: flex;
+}
+
+.landing-nav-listItem {
+  margin: 0 2rem;
+  font-family: "Campton";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  position: relative;
+  color: #2b2e63;
+  display: flex;
+}
+
+span {
+  color: #2b2e63;
+  position: relative;
+  margin-left: 0.5rem;
+}
+
+.landing-nav-action-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+}
+
+.landing-nav-login {
+  color: #242653;
+  width: fit-content;
+  height: 24px;
+  margin-right: 2rem;
+  font-family: "Campton";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.landing-nav-btn-primary-large {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 15px 30px;
+  gap: 15px;
+  width: 157px;
+  height: 56px;
+  background: #242653;
+  border-radius: 8px;
+  outline: 0;
+  border: none;
+}
+.getting-started-link {
+  color: #fff;
+}
+
+.dropdown-arrow {
+  position: absolute;
+  left: 30%;
+  right: 17%;
+  top: 0;
+  /* bottom: 33.14%; */
+
+  /* border: 1.5px solid #242653; */
+}
+/* NAV STYLES */
 
 /* TESTIMONIAL STYLES */
 .testimonial__section {
-    background-color: var(--blue);
-    height: 408px;
+  background-color: var(--blue);
+  height: 408px;
 }
 
 .testimonial__container {
-    max-width: 1232px;
-    margin: 0 auto;
-    padding: 50px 0;
+  max-width: 1232px;
+  margin: 0 auto;
+  padding: 50px 0;
 }
 
 .testimonial__h2 {
-    margin-bottom: 62px;
-    margin-top: 21px;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 37px;
-    text-align: center;
-    color: #D2D9EC;
+  margin-bottom: 62px;
+  margin-top: 21px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37px;
+  text-align: center;
+  color: #d2d9ec;
 }
 
 .testimonial__card-wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 34px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 34px;
 }
 
 .testimonial__card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 388px;
-    height: 148px;
-    background: #F8F8F8;
-    box-shadow: 0px 4px 4px rgba(39, 39, 39, 0.1), inset 0px 4px 4px rgba(0, 0, 0, 0.05);
-    border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 388px;
+  height: 148px;
+  background: #f8f8f8;
+  box-shadow: 0px 4px 4px rgba(39, 39, 39, 0.1),
+    inset 0px 4px 4px rgba(0, 0, 0, 0.05);
+  border-radius: 16px;
 }
 
 .testimonial__card-image {
-    margin-top: -50px;
-    width: 60px;
-    height: 60px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%;
+  margin-top: -50px;
+  width: 60px;
+  height: 60px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
 }
 
 .testimonial__card-image img {
-    width: 100%;
+  width: 100%;
 }
 
 .testimonial__card-body {
-    margin-top: 12px;
-    margin-left: 40px;
-    margin-right: 40px;
-
+  margin-top: 12px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .testimonial__card-text-p {
-    margin-bottom: -10px;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 22px;
-    color: var(--blue);
+  margin-bottom: -10px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 22px;
+  color: var(--blue);
 }
 
 .testimonial__hr {
-    margin-top: 20px;
-    margin-bottom: 14px;
+  margin-top: 20px;
+  margin-bottom: 14px;
 }
 
 .testimonial__h4 {
-    margin-bottom: 6px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    color: var(--blue);
+  margin-bottom: 6px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--blue);
 }
 
 /* PARTNERS SECTION STYLES */
 .partners__section {
-    height: 408px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
+  height: 408px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
 }
 
 .partners__images-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .partners__images-container img {
-    margin-right: 48px;
-    margin-bottom: 38px;
-    height: 32px;
+  margin-right: 48px;
+  margin-bottom: 38px;
+  height: 32px;
 }
 
 .partners__h3 {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 28px;
-    text-align: center;
-    color: #090914;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  color: #090914;
 }
 
 /* CALL TO ACTION STYLES */
 .call-to-action__section {
-    background-color: var(--blue);
-    height: 408px;
+  background-color: var(--blue);
+  height: 408px;
 }
 
 .call-to-action__container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .call-to-action__h2 {
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 56px;
-    text-align: center;
-    text-transform: capitalize;
-    color: #D2D9EC;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #d2d9ec;
 
-    margin-top: 62px;
-    margin-bottom: 32px;
+  margin-top: 62px;
+  margin-bottom: 32px;
 }
 
 .call-to-action__p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #F8F8F8;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #f8f8f8;
 
-    margin-bottom: 42px;
+  margin-bottom: 42px;
 }
 
 .call-to-action-btn {
-    text-align: center;
-    padding: 17px 20px;
-    width: 230px;
-    height: 56px;
-    background: #798DC5;
-    border-radius: 8px;
+  text-align: center;
+  padding: 17px 20px;
+  width: 230px;
+  height: 56px;
+  background: #798dc5;
+  border-radius: 8px;
 
-    font-weight: 400;
-    font-size: 14px;
-    color: #E4E8F3;
+  font-weight: 400;
+  font-size: 14px;
+  color: #e4e8f3;
 }
-
 
 /* Gallery styles */
 
-.main{
-    display: flex;
-    
+.main {
+  display: flex;
 }
 
-
-.one{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+.one {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-.one-one{
-    display: flex;
+.one-one {
+  display: flex;
 }
 
-.two{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-
+.two {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-.three{
-    display: flex;
+.three {
+  display: flex;
 
-    flex-direction: column;
+  flex-direction: column;
 }
 
-
-.image-1{
-    padding-top: 145px;
-    padding-bottom: 78px;
+.image-1 {
+  padding-top: 145px;
+  padding-bottom: 78px;
 }
 
-.image-2{
-    padding-top: 162px;
-    padding-bottom: 43px;
+.image-2 {
+  padding-top: 162px;
+  padding-bottom: 43px;
 }
 
 .image-3 {
-    padding-left: 8px;
-    padding-bottom: 221px;
+  padding-left: 8px;
+  padding-bottom: 221px;
 }
 
-.image-4{
-    padding-top: 78px;
-    padding-bottom: 44px;
+.image-4 {
+  padding-top: 78px;
+  padding-bottom: 44px;
 }
 
 .image-5 {
-    padding-bottom: 242px;
+  padding-bottom: 242px;
 }
 
-.image-6{
-    padding-top: 167px;
-    padding-left: 36px;
-    padding-bottom: 40px;
+.image-6 {
+  padding-top: 167px;
+  padding-left: 36px;
+  padding-bottom: 40px;
 }
 
-.image-7{
-    padding-top: 100px;
-    padding-left: 90px;
-    padding-bottom: 50px;
+.image-7 {
+  padding-top: 100px;
+  padding-left: 90px;
+  padding-bottom: 50px;
 }
 
-.image-8{
-    padding-top: 115px;
+.image-8 {
+  padding-top: 115px;
 }
 
-.image-9{
-    padding-left: 78px;
+.image-9 {
+  padding-left: 78px;
 }
 
-.image-10{
-    padding-top: 65px;
+.image-10 {
+  padding-top: 65px;
 }
 
-.image-11{
-    padding-left: 80px;
-    padding-top: 39px;
+.image-11 {
+  padding-left: 80px;
+  padding-top: 39px;
 }
 
 /* End of gallery styling */
