--- a/template/index.html
+++ b/template/index.html
@@ -37,12 +37,19 @@
             </button>
           </div>
         </nav>
+
+        <!-- hero section -->
+
       </header>
       
         <!-- Another Section -->
+        <section class="sample-text">
+            
+        </section>
+
         <!-- Gallery -->
-         <section class="gallery">
-        <div class="one">
+        <section class="gallery">
+            <div class="one">
             <div class="one-one">
                 <img 
                 class="image-1" 
@@ -89,8 +96,8 @@
             class="image-11" 
             src="./gallery/iPad Pro 11_ - 4 (1).png" alt="">
         </div>
+        </section>
 
-    </>
         <!-- Portfolio -->
         <!-- Services -->
         <!-- Testimonials -->
@@ -151,6 +158,9 @@
                 <p class="call-to-action__p">WebBuildr enables you to create,edit,collaborate on, publish and store digital content without the help of developers. You do not need a technical skill or knowledge, it’s all made easy using WebBuildr the fastest way to kick start a managable future.</p>
                 <a href="#" class="call-to-action-btn">Create a website for free</a>
             </div>
+        </section>
+
+        
         <!-- FQA -->
         <!-- Footer -->
     </main>
