commit sample text

--- a/template/index.html
+++ b/template/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <!-- Header Section -->
-        <header class="landing-nav-header">
+        <header class="landing-header">
         <nav class="landing-nav">
           <div class="logo">
             <img src="./images/nav/logo.svg" alt="" />
@@ -43,8 +43,11 @@
       </header>
       
         <!-- Another Section -->
-        <section class="sample-text">
-            
+        <section class="sample-container">
+            <div class="sample-wrapper">
+                <h1 class="sample-text-h1">create a website in less than an hour</h1>
+                <p class="sample-text-p">Check out mind-blowing templates all made with webBuildr. we’ve taken the stress off you, choose a template and make an easy build</p>
+            </div>
         </section>
 
         <!-- Gallery -->
