--- a/template/style.css
+++ b/template/style.css
@@ -34,6 +34,16 @@ li {
 }
 
 /* NAV STYLES */
+.landing-header {
+  background-color: var(--blue);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
 .landing-nav {
   display: flex;
   justify-content: space-between;
@@ -114,11 +124,63 @@ span {
   left: 30%;
   right: 17%;
   top: 0;
-  /* bottom: 33.14%; */
-
-  /* border: 1.5px solid #242653; */
 }
 /* NAV STYLES */
+
+/* sample text styles */
+.sample-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 4rem;
+}
+.sample-wrapper {
+  padding: 4rem;
+}
+
+.sample-text-h1 {
+  /* create a website in less than an hour */
+
+  width: 924px;
+  height: 56px;
+
+  font-family: "Campton";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  text-align: center;
+  text-transform: capitalize;
+
+  color: #090914;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.sample-text-p {
+  width: 972px;
+  height: 72px;
+
+  font-family: "Campton";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 150%;
+  /* or 36px */
+  text-align: center;
+
+  color: #1d1f42;
+
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+/* sample text styles */
 
 /* TESTIMONIAL STYLES */
 .testimonial__section {
