--- a/template/index.html
+++ b/template/index.html
@@ -50,57 +50,56 @@
             </div>
         </section>
 
-        <!-- Gallery -->
+       <!-- Gallery -->
         <section class="gallery">
             <div class="one">
             <div class="one-one">
                 <img 
                 class="image-1" 
-                src="./gallery/Desktop - 13.png" alt="">
+                src="./images/gallery/Desktop - 13.png" alt="">
                 <img 
                 class="image-2" 
-                src="./gallery/iPad Pro 11_ - 7.png" alt="">
+                src="./images/gallery/iPad Pro 11_ - 7.png" alt="">
             </div>
             <img 
             class="image-3" 
-            src="./gallery/MacBook Pro 16_ - 2.png" alt="">
+            src="./images/gallery/MacBook Pro 16_ - 2.png" alt="">
         </div>
 
         <div class="two">
             <img
             class="image-4" 
-            src="./gallery/Screenshot (9).png" alt="">
+            src="./images/gallery/Screenshot (9).png" alt="">
             <img
             class="image-5" 
-            src="./gallery/iPad Pro 11_ - 4.png" alt="">
+            src="./images/gallery/iPad Pro 11_ - 4.png" alt="">
         </div>
 
         <div class="three">
             <img 
             class="image-6" 
-            src="./gallery/Desktop - 15.png" alt="">
+            src="./images/gallery/Desktop - 15.png" alt="">
             <img  
             class="image-7"
-            src="./gallery/Desktop - 26.png" alt="">
+            src="./images/gallery/Desktop - 26.png" alt="">
         </div>
 
         <div class="four">
             <img 
             class="image-8" 
-            src="./gallery/iPad Pro 11_ - 6.png" alt="">
+            src="./images/gallery/iPad Pro 11_ - 6.png" alt="">
             <img class="image-9" 
-            src="./gallery/Screenshot (9).png" alt="">
+            src="./images/gallery/Screenshot (9).png" alt="">
         </div>
 
         <div class="five">
             <img class="image-10" 
-            src="./gallery/Desktop - 7.png" alt="">
+            src="./images/gallery/Desktop - 7.png" alt="">
             <img 
             class="image-11" 
-            src="./gallery/iPad Pro 11_ - 4 (1).png" alt="">
+            src="./images/gallery/iPad Pro 11_ - 4 (1).png" alt="">
         </div>
         </section>
-
         <!-- Portfolio -->
         <!-- Services -->
         <!-- Testimonials -->
