Work done on the portfolio section

--- a/template/style.css
+++ b/template/style.css
@@ -186,6 +186,109 @@ span {
 
 /* sample text styles */
 
+/* PORTFOLIO STYLES */
+.portfolio__section {
+  padding: 50px 0;
+  margin: 0 40px;
+}
+
+.portfolio__container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.portfolio__row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.portfolio__row-reverse {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.portfolio__img {
+  width: 629.59px;
+  height: 383px;
+  filter: drop-shadow(0px 75px 50px rgba(74, 72, 72, 0.1));
+  overflow: hidden;
+}
+
+.portfolio__row .portfolio__img img {
+  margin-left: -100px;
+}
+.portfolio__text {
+  height: 383px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.portfolio__row-reverse .portfolio__text {
+  height: 383px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.portfolio__row .portfolio__h2 {
+  font-family: 'Campton';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  text-transform: capitalize;
+  color: #090914;
+  margin-bottom: 32px;
+  margin-right: 200px;
+}
+
+.portfolio__h2 {
+  font-family: 'Campton';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #090914;
+  margin-bottom: 32px;
+}
+
+.portfolio__text p {
+  max-width: 373px;
+  margin-bottom: 56px;
+  font-family: 'Campton';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #1D1F42;
+}
+
+.portfolio__text-link {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.portfolio__text a {
+  font-family: 'Campton';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: capitalize;
+  color: #2B2E63;
+}
+
+/* PORTFOLIO STYLES */
+
 /* TESTIMONIAL STYLES */
 .testimonial__section {
   background-color: var(--blue);
@@ -265,6 +368,7 @@ span {
   line-height: 22px;
   color: var(--blue);
 }
+/* TESTIMONIAL STYLES */
 
 /* PARTNERS SECTION STYLES */
 .partners__section {
@@ -296,6 +400,7 @@ span {
   text-align: center;
   color: #090914;
 }
+/* PARTNERS SECTION STYLES */
 
 /* CALL TO ACTION STYLES */
 .call-to-action__section {
@@ -346,6 +451,7 @@ span {
   font-size: 14px;
   color: #e4e8f3;
 }
+/* CALL TO ACTION STYLES */
 
 /* Gallery styles */
 
