--- a/template/index.html
+++ b/template/index.html
@@ -101,6 +101,32 @@
         </div>
         </section>
         <!-- Portfolio -->
+        <section class="portfolio__section">
+            <div class="portfolio__container">
+                <div class="portfolio__row">
+                    <div class="portfolio__img">
+                        <img src="./images/portfolio/portfolio.png" alt="Portfolio Image">
+                    </div>
+                    <div class="portfolio__text">
+                        <h2 class="portfolio__h2">Portfolio</h2>
+                        <p>Made with WebBuildr. create your portfolio today on a click</p>
+                        <div class="portfolio__text-link">
+                            <a href="#">View Template</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__row-reverse">
+                    <div class="portfolio__img">
+                        <img src="./images/portfolio/web-3.png" alt="Web 3 Image">
+                    </div>
+                    <div class="portfolio__text">
+                        <h2 class="portfolio__h2">Web3</h2>
+                        <p>Made with WebBuildr. create your portfolio today on a click</p>
+                        <a href="#">View Template</a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Services -->
         <!-- Testimonials -->
         <section class="testimonial__section">
