work done on footer section

--- a/template/index.html
+++ b/template/index.html
@@ -165,6 +165,48 @@
         
         <!-- FQA -->
         <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col">
+                    <h3>Product</h3>
+                    <p>Designer</p>
+                    <p>Enterprise</p>
+                    <p>CMS</p>
+                    <p>Editor</p>
+                    <p>SEO</p>
+                    <p>Security</p>
+                </div>
+                <div class="col">
+                    <h3>Community</h3>
+                    <p>Help Center</p>
+                    <p>About</p>
+                    <p>Terms of Service</p>
+                    <p>Cookie Policy</p>
+                    <p>Cookie Preference</p>
+                </div>
+                <div class="col">
+                 <h3>Features</h3>
+                 <p>Template</p>
+                 <p>Hosting</p>
+                 <p>Interaction</p>
+                 <p>Logo Maker</p>
+                </div>
+                 <div class="col">
+                    <h3>Follow</h3>
+                    <p>Twitter</p>
+                    <p>Instagram</p>
+                    <p>Linkedin</p>
+                    <p>Facebook</p>
+                </div>
+                <div class="col">
+                 <h3>Resources</h3>
+                 <p>Tutorial videos</p>
+                 <p>Portfolio</p>
+                 <p>Hire an expert</p>
+                 <p>upcoming webinar</p>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
