--- a/template/style.css
+++ b/template/style.css
@@ -549,4 +549,9 @@ footer {
   margin-bottom: 40px;
   position: relative;
 }
+a{
+  display: inline-block;
+  background: var(--blue);
+  color: #fff;
+}
 /* End of gallery styling */
