--- a/template/style.css
+++ b/template/style.css
@@ -184,6 +184,7 @@ span {
   cursor: pointer;
   padding:1rem;
   border: none;
+  color: white;
   background-color:#798DC5;
   border-radius: 8px;
   
