--- a/template/index.html
+++ b/template/index.html
@@ -13,8 +13,8 @@
 <body>
     <main>
         <!-- Header Section -->
-        <header class="landing-header">
-        <nav class="landing-nav">
+        <!-- <header class="landing-header"> -->
+        <!-- <nav class="landing-nav">
           <div class="logo">
             <img src="./images/nav/logo.svg" alt="" />
           </div>
@@ -39,8 +39,28 @@
               <a class="getting-started-link" href="">GET STARTED</a>
             </button>
           </div>
-        </nav>
+        </nav> -->
+    <!-- </header> -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="./images/nav/logo.svg" alt="" />
+            </div>
 
+            <ul>
+                <li>Product<span><img src="./images/nav/downArrow.svg" alt="" /></span></li>
+                <li>Resource<span><img src="./images/nav/downArrow.svg" alt="" /></span></li>
+                <li>Templates</li>
+                <li>Hire an expert</li>
+            </ul>
+
+            <div class="nav-btns">
+                <button> <a href="#">LOG IN</a></button>
+                <button> <a href="#">GET STARTED</a></button>
+            </div>
+        </nav>
+    </header>
+<!-- ---------------------------------------------------------------------------- -->
         <!-- hero section -->
         <section class="hero-section">
             <!-- left hero section -->
@@ -63,7 +83,7 @@
             </div>
         </section>
 
-      </header>
+        <!-- -------------------------------------------------------------------------- -->
       
         <!-- Another Section -->
         <section class="sample-container">
