Finished FAQ section

--- a/template/index.html
+++ b/template/index.html
@@ -210,9 +210,47 @@
                 <a href="#" class="call-to-action-btn">Create a website for free</a>
             </div>
         </section>
-
-        
-        <!-- FQA -->
+        <!-- faq -->
+        <section class="faq__section">
+            <div class="faq__container">
+                <h2>faqs</h2>
+                <div class="faq__item">
+                    <p>How much does it cost to create a website?</p>
+                    <img src="./images/arrow-right.svg" alt="Right Arrow">
+                </div>
+                <hr>
+                <div class="faq__item">
+                    <p>Do I have to code while building my website?</p>
+                    <img src="./images/arrow-right.svg" alt="Right Arrow">
+                </div>
+                <hr>
+                <div class="faq__item">
+                    <p>How do I download tutorial videos?</p>
+                    <img src="./images/arrow-right.svg" alt="Right Arrow">
+                </div>
+                <hr>
+                <div class="faq__item">
+                    <p>What’s the cost to have access to an expert? </p>
+                    <img src="./images/arrow-right.svg" alt="Right Arrow">
+                </div>
+                <hr>
+                <div class="faq__item">
+                    <p>Are webinar sessions free?</p>
+                    <img src="./images/arrow-right.svg" alt="Right Arrow">
+                </div>
+                <hr>
+                <div class="faq__item">
+                    <p>Do I have to pay to access template?</p>
+                    <img src="./images/arrow-right.svg" alt="Right Arrow">
+                </div>
+                <hr>
+                <div class="faq__item">
+                    <p>Do I have to pay to have access to expert?</p>
+                    <img src="./images/arrow-right.svg" alt="Right Arrow">
+                </div>
+                <hr>
+            </div>
+        </section>
         <!-- Footer -->
         <footer>
             <div class="row">
