Fixed a bg bug on the portfolio section

--- a/template/style.css
+++ b/template/style.css
@@ -419,6 +419,7 @@ span {
   line-height: 24px;
   text-transform: capitalize;
   color: #2b2e63;
+  background: transparent;
 }
 
 /* PORTFOLIO STYLES */
