--- a/template/index.html
+++ b/template/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div>
                     <p>Further <span>Your</span> Effort <br><span>Using</span> WebBuildr.</p>
-                    <p>The easiest and fastest way to bild your website. <br> No coding,Zero charges</p>
+                    <p>The easiest and fastest way to build your website. <br> No coding,Zero charges</p>
                     <button><a href="#"></a>GET STARTED</a></button>
                     
                 </div>
