--- a/template/index.html
+++ b/template/index.html
@@ -104,7 +104,7 @@
         </section>
         <!-- Portfolio -->
         <section class="portfolio__section">
-            <div class="portfolio__container">
+            <div class="portfolio_top">
                 <div class="portfolio__row">
                     <div class="portfolio__img">
                         <img src="./images/portfolio/portfolio.png" alt="Portfolio Image">
@@ -128,6 +128,56 @@
                     </div>
                 </div>
             </div>
+            <div class="portfolio_bottom">  
+                <div id="glimpse">
+                    <h2>A Glimpse Of What You Can Do With WebBuildr</h2>
+                </div>
+                <div class="info-1 info">
+                    <h3>Create a website without stress</h3>
+                    <p>With the use of a large variety of template, you<br>
+                        will surely find one that suits your need<br>
+                    </p>
+                    <hr>
+                    
+                </div>
+                <div class="info-2 info">
+                    <h3>
+                    Access to tutorial videos
+                    </h3>
+                    <p>
+                    You are granted full access to tutorial videos to <br>
+                    help you navigate through and for ease website <br>
+                    creation
+                    </p>
+                    <hr>
+                    
+                </div>
+                <div class="info-3 info">
+                    <h3>
+                    Free online events
+                    </h3>
+                    <p>
+                    You are exposed to learning basics to improve<br>
+                    your workflow using WebBuildr. Itsa one-hour<br>
+                    session that enables you to set up your website<br>
+                    </p> 
+                    <hr>
+                </div>
+                <div class="info-4 info">
+                    <h3>
+                    Hire an expert
+                    </h3>
+                    <p>
+                    You need a professional to help you create, and <br>
+                    manage your website
+                    </p>
+                    <hr>
+                </div>
+                <div class="info-5">
+                    <h3>See More</h3>
+                </div>
+            </div>
+
         </section>
         <!-- Services -->
         <!-- Testimonials -->
