--- a/template/index.html
+++ b/template/index.html
@@ -103,26 +103,26 @@
         </div>
         </section>
         <!-- Portfolio -->
-        <section class="portfolio__section">
+        <section class="portfolio_section">
             <div class="portfolio_top">
-                <div class="portfolio__row">
-                    <div class="portfolio__img">
+                <div class="portfolio_row">
+                    <div class="portfolio_img">
                         <img src="./images/portfolio/portfolio.png" alt="Portfolio Image">
                     </div>
-                    <div class="portfolio__text">
-                        <h2 class="portfolio__h2">Portfolio</h2>
+                    <div class="portfolio_text">
+                        <h2 class="portfolio_h2">Portfolio</h2>
                         <p>Made with WebBuildr. create your portfolio today on a click</p>
-                        <div class="portfolio__text-link">
+                        <div class="portfolio_text-link">
                             <a href="#">View Template</a>
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__row-reverse">
-                    <div class="portfolio__img">
+                <div class="portfolio_row-reverse">
+                    <div class="portfolio_img">
                         <img src="./images/portfolio/web-3.png" alt="Web 3 Image">
                     </div>
-                    <div class="portfolio__text">
-                        <h2 class="portfolio__h2">Web3</h2>
+                    <div class="portfolio_text">
+                        <h2 class="portfolio_h2">Web3</h2>
                         <p>Made with WebBuildr. create your portfolio today on a click</p>
                         <a href="#">View Template</a>
                     </div>
