--- a/cmsproject/account/templates/account/login.html
+++ b/cmsproject/account/templates/account/login.html
@@ -5,19 +5,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome back" />
+    <meta name="keywords" content="signin, signup, login, register" />
+    <link
+      rel="stylesheet"
+      href="{% static 'webkit-campton/camptonextrabold-webfont.woff' %}"
+    />
     <link rel="stylesheet" href="{% static 'signin/sign.css' %}" />
     <title>WebBuilder</title>
 </head>
 <body>
-    <h1>Log Into My Account</h1>
-      <form method="POST">
-          {% csrf_token %}
-          {{ form.non_field_errors }}
-          {{ form.username.errors }}
-          <input type="text" name="{{ form.username.label|lower }}" value="" placeholder="Username or Email" id="{{ form.username.id_for_label }}">
-          {{ form.password.errors }}
-          <input type="password" name="{{ form.password.label|lower }}" value="" placeholder="Password" id="{{ form.password.id_for_label }}">
-          <input type="submit" value="Log In">
-      </form>
-</body>
+  <main>
+      <div class="sign-grid">
+        <div class="sigin-information signin-gridbox">
+          <div class="grid-logo">
+            <img src="{% static 'images/nav/logo.svg' %}" alt="logo" />
+          </div>
+          <div class="signin-wrapper">
+            <div class="signin-title">
+              <h2>Log Into My Account</h2>
+            </div>
+            <div class="google-sign-wrapper">
+              <div class="google-sign-in" title="This is just for design purposes">
+                <a href="#"
+                  ><img src="{% static 'signin/assets/google-logo.svg' %}" alt="google-logo"
+                /></a>
+              </div>
+              <p class="or">or</p>
+            </div>
+            <div class="signin-body">
+              <form method="POST" class="signin-form">
+                  {% csrf_token %}
+                  {{ form.non_field_errors }}
+                  <div class="form-group">
+                    {{ form.username.errors }}
+                    <input type="text" class="form-control" name="{{ form.username.label|lower }}" value="" placeholder="Username or Email" id="{{ form.username.id_for_label }}">
+                  </div>
+                  <div class="form-group">
+                    {{ form.password.errors }}
+                    <input type="password" class="form-control" name="{{ form.password.label|lower }}" value="" placeholder="Password" id="{{ form.password.id_for_label }}">
+                  </div>
+                  <div class="form-group-btn">
+                  <button type="submit" value="Sign In" class="signin-btn">
+                    Log In
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="signin-options">
+              <p>
+                <a href="{% url 'account:signup' %}">Don't Have an Account?</a>
+              </p>
+              <p>
+                <a href="#">Forgot password?</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="signin-svg signin-gridbox">
+          <div class="girl-svg-wrap">
+            <img src="{% static 'signin/assets/girl.svg' %}" alt="Girl Svg" class="girl-svg-img" />
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
