--- a/template/registerConfirmation/registerConf.html
+++ b/template/registerConfirmation/registerConf.html
@@ -20,10 +20,10 @@
           <div class="confirm-wrapper">
               <div class="confirm-img-wrap">
                   
-                  <img src="./assets/verified.svg" alt="" />
+                  <img src="./assets/verified.svg" alt="" class="verified-svg-img"/>
                 </div>
                 <div class="confirm-btn-wrap">
-                    <a href="../index.html" class="confirm-btn"> Resend Email </a>
+                    <a href="#" class="confirm-btn"> Resend Email </a>
                 </div>
             </div>
         </div>
