--- a/template/signin/signin.html
+++ b/template/signin/signin.html
@@ -46,7 +46,7 @@
                   <input class="form-control"
                     type="password"
                     name="password"
-                    id="password"
+                    id="password" autocomplete="on"
                     placeholder="Password"
                   />
                 </div>
