--- a/template/portfolio/portfolio.html
+++ b/template/portfolio/portfolio.html
@@ -43,9 +43,43 @@
 
   <!-- Hero section with Carousel -->
   <section class="hero__section">
-    <div class="main__container">
-      <h1 class="text-center">Portfolio</h1>
-
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100" alt="Wild Landscape"/>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp" class="d-block w-100" alt="Camera"/>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp" class="d-block w-100" alt="Exotic Fruits"/>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </section>
 
@@ -56,13 +90,13 @@
       <p>Here are few videos to help you navigate through WebBuildr</p>
       <div class="wrapper">
         <div class="tutorial__image">
-          <img src="./images/tutorials/tutorial-1.png" alt="">
+          <img src="./images/tutorials/tutorial-1.png" alt="" />
         </div>
         <div class="tutorial__image">
-          <img src="./images/tutorials/tutorial-1.png" alt="">
+          <img src="./images/tutorials/tutorial-1.png" alt="" />
         </div>
         <div class="tutorial__image">
-          <img src="./images/tutorials/tutorial-1.png" alt="">
+          <img src="./images/tutorials/tutorial-1.png" alt="" />
         </div>
       </div>
     </div>
@@ -75,20 +109,27 @@
         <div class="hire__text">
           <h2>hire an expert</h2>
           <div class="hire__item">
-            <img src="#" alt="">
-            <p>Are you a marketer and still aren’t equipped to the use of technology. Hire an expert to help you in creating, and managing your website</p>
+            <img src="#" alt="" />
+            <p>
+              Are you a marketer and still aren’t equipped to the use of
+              technology. Hire an expert to help you in creating, and managing
+              your website
+            </p>
           </div>
           <div class="hire__item">
-            <img src="#" alt="">
-            <p>You need a professional to help you to create, and manage your website</p>
+            <img src="#" alt="" />
+            <p>
+              You need a professional to help you to create, and manage your
+              website
+            </p>
           </div>
           <div class="hire__item">
-            <img src="#" alt="">
+            <img src="#" alt="" />
             <p>Want to create a path way to the future through technology</p>
           </div>
         </div>
         <div class="hire__image">
-          <img src="./images/hire.png" alt="">
+          <img src="./images/hire.png" alt="" />
         </div>
       </div>
       <div class="hire__button">
@@ -99,16 +140,12 @@
 
   <!-- Blog -->
   <section class="blog__section">
-    <div class="main__container">
-      
-    </div>
+    <div class="main__container"></div>
   </section>
 
   <!-- Webiner -->
   <section class="webiner__section">
-    <div class="main__container">
-      
-    </div>
+    <div class="main__container"></div>
   </section>
   <!-- Footer -->
   <footer>
