finished registration page

--- a/template/registerPage/register.html
+++ b/template/registerPage/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./register.css">
+    <link rel="stylesheet" href="./register.css" />
     <title>Register With us</title>
   </head>
   <body>
@@ -43,7 +43,7 @@
           <p class="or">or</p>
           <form action="" class="form-body">
             <div class="form-division">
-              <div class="form-group">
+              <div class="form-group dv1">
                 <input
                   type="text"
                   class="form-control"
@@ -71,25 +71,25 @@
                 type="email"
                 name="email"
                 id="email"
-                placeholder="Email or username"
+                placeholder="Email"
               />
             </div>
             <div class="form-group">
               <input
                 type="text"
                 class="form-control"
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Email or username"
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Password "
               />
             </div>
             <div class="form-group-btn">
-              <button type="submit" class="register-btn">Log In</button>
+              <button type="submit" class="register-btn">Create Account</button>
             </div>
           </form>
           <div class="form-checkbox-wrap">
-            <input type="checkbox" class="form-checkbox" />
+            <input type="checkbox" class="register-form-checkbox" />
             <p>
               Signing up for a WebBuildr account means you agree to the Privacy
               Policy and Terms of Service.
