--- a/cmsproject/account/templates/account/signup.html
+++ b/cmsproject/account/templates/account/signup.html
@@ -1,17 +1,102 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebBuilder</title>
-</head>
-<body>
-    <h1>Sign Up</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Sign Up">
-    </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="{% static 'registerPage/register.css' %}" />
+    <title>Register With us</title>
+  </head>
+  <body>
+    <div class="action-btns">
+      <button class="action-btn-go-back">
+        <span class="go-back-svg">
+          <img src="{% static 'registerPage/assets/backIcon.svg' %}" alt="" />
+        </span>
+        back
+      </button>
+      <button class="action-btn-go-login">login</button>
+    </div>
+    <main class="register-main">
+      <div class="main-container">
+        <div class="register-logo">
+          <img src="{% static 'registerPage/assets/logo.svg' %}" alt="" class="register-logo-img" />
+        </div>
+        <p class="create-account">Create Your Account</p>
+        <div class="form-container">
+          <div class="form-action-btns">
+            <button class="form-action-btn">
+              <img src="{% static 'registerPage/assets/google-logo.svg' %}" class="form-action-google-logo" alt="" />
+            </button>
+            <button class="form-action-btn">
+              <img src="{% static 'registerPage/assets/appleLogo.svg' %}" class="form-action-apple-logo" alt="" />
+            </button>
+          </div>
+          <p class="or">or</p>
+          <form action="" method="POST" class="form-body">
+                {% csrf_token %}
+                {{ form.first_name }}
+                {{ form.last_name }}
+                {{ form.email }}
+
+
+
+            <!-- <div class="form-division"> 
+              <div class="form-group dv1">
+                <input
+                  type="text"
+                  class="form-control"
+                  type="text"
+                  name="firstname"
+                  id="firstname"
+                  placeholder="first name"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  type="text"
+                  name="lastname"
+                  id="lastname"
+                  placeholder="last name"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Email"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control"
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Password "
+              />
+            </div>
+            <div class="form-group-btn">
+              <button type="submit" class="register-btn">Create Account</button>
+            </div>
+          </form>
+          <div class="form-checkbox-wrap">
+            <input type="checkbox" class="register-form-checkbox" />
+            <p>
+              Signing up for a WebBuildr account means you agree to the Privacy
+              Policy and Terms of Service.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
